--- a/asset/index.html
+++ b/asset/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class = "nav-bar fixed-top">
-        <p class ="nigga"><b><i><u>Christmas Crossword!</u></i></b></p>
+        <p class ="nav-heading"><b><i><u>Christmas Crossword!</u></i></b></p>
     </nav>
     <div class = "plot">
         <div id="tree" class="tree background outline">
